--- a/libreria/templates/books/create.html
+++ b/libreria/templates/books/create.html
@@ -3,10 +3,8 @@
 {% block title %} Add New Book {% endblock %}
 
 {% block content %}
-<br>
-<br>
-<br>
-<div class="card bg-dark">
+
+<div class="card bg-dark"style="padding: 20px;">
     <div class="card-header">
         Create a New Book
     </div>
