--- a/libreria/templates/courses/create.html
+++ b/libreria/templates/courses/create.html
@@ -3,10 +3,8 @@
 {% block title %} Add New Course {% endblock %}
 
 {% block content %}
-<br>
-<br>
-<br>
-<div class="card bg-dark">
+
+<div class="card bg-dark" style="padding: 20px;">
     <div class="card-header">
         Create a New Course
     </div>
