se agrego el consumi de un API de prueba para agregar cursos 7/14/2023

--- a/libreria/templates/home.html
+++ b/libreria/templates/home.html
@@ -58,32 +58,8 @@
   <h2 class="text-center p-5">Featured Books</h2>
 </div>
 {% load static %}
-<div class="container d-flex justify-content-center gap-5">
-  <div class="card bg-dark " style="width: 18rem; ">
-    <img class="card-img-top" src="{% static 'libreria/assets/img/Bases de datos avanzadas.webp'%}" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Bases de datos avanzadas</h5>
-      <p class="card-text">Las bases de datos relacionales centralizadas representan una alternativa de almacenamiento bien conocida, para la cual se pueden aplicar técnicas de mejoramiento de desempeño de consultas frente al constante crecimiento del volumen de los datos. </p>
-      <a href="#" class="btn btn-outline-primary">See Book</a>
-    </div>
-  </div>
-  <div class="card bg-dark" style="width: 18rem;">
-    <img class="card-img-top" src="{% static 'libreria/assets/img/CSS Notes for Professionals.webp'%}" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">CSS Notes for Professionals</h5>
-      <p class="card-text">"CSS Notes for Professionals" is an excellent resource for anyone looking to start learning CSS, one of the most important web development technologies. Whether you are a complete beginner, or looking to take your CSS skills to the next level, this ebook is the perfect place to start.</p>
-      <a href="#" class="btn btn-outline-primary">See Book</a>
-    </div>
-  </div>
-  <div class="card bg-dark" style="width: 18rem;">
-    <img class="card-img-top" src="{% static 'libreria/assets/img/PHP Notes for Professionals.webp'%}" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">PHP Notes for Professionals</h5>
-      <p class="card-text">PHP is a server-side scripting language that is widely used for web development. With this book, you will get a deep understanding of the advanced programming concepts in PHP and how to apply it practically.</p>
-      <a href="#" class="btn btn-outline-primary">See Books</a>
-    </div>
-  </div>
-</div>
+
+  <main class="container"></main>
 
 
 
