--- a/libreria/templates/base.html
+++ b/libreria/templates/base.html
@@ -95,6 +95,10 @@
            </script>
         {% endfor %}
     {% endif %}
+
+    <script src="{% static 'libreria/js/base.js' %}">
+
+    </script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
