--- a/libreria/templates/books/form.html
+++ b/libreria/templates/books/form.html
@@ -29,6 +29,6 @@
 
   {% endfor %}
 
-  <input name="" id="" class="btn btn-primary" type="submit" value="Send edited information"></input>
-  <a name="" id="" class="btn btn-warning" href="{% url 'books'%}" role="button">Cancel Edit</a>
+  <input name="" id="" class="btn btn-outline-light btn-floating m-1" type="submit" value="Send edited information"></input>
+  <a name="" id="" class="btn btn-outline-light btn-floating m-1" href="{% url 'books'%}" role="button">Cancel Edit</a>
 </form>
