--- a/libreria/templates/posts/index.html
+++ b/libreria/templates/posts/index.html
@@ -20,34 +20,35 @@
         {% csrf_token %}
         {{form.media}}
         {{form|crispy}}
-        <input class="btn btn-warning" type="submit" value="Submit Post">
+        <input class="btn btn-outline-light btn-floating m-1" type="submit" value="Submit Post">
 
     </form>
 
 </div>
 
-<h2 style="text-align:center; margin: 20px 0px; ">All Projects</h2>
-    <div class="main-container container d-flex justify-content-center gap-4 flex-wrap">
-        
+    <h2 style="text-align:center; margin: 20px 0px; ">All Projects</h2>
+        <div class="main-container container d-flex justify-content-center gap-4 flex-wrap">
             {% for post in posts %}
-            <div class="card bg-dark" style="width: 17rem;">
-                <img src="{{post.image.url}}" class="card-img-top" alt="{{post.title}}" >
-                <div class="card-body">
-                  <h5 class="card-title" style=" margin-bottom: 20px;">{{post.title}}</h5>
-                  <div><small>Author: {{post.author}}</small></div>
-                  <br>
-                  <small>Tags: </small>
-                  {% for tag in post.tags.all %}
-                  
-                        <span class="tag" style="background-color: #EFE1D1; color:#331D2C; padding:5px 2px; border-radius: 5px;">{{tag}}</span>
-                        {% endfor %}
-                        <hr>
-                  <a href="{%  url 'post' post.id %}" class="btn btn-primary">Read More...</a>
-                  <a href="{% url 'editUrl' post.id %}" class="btn btn-outline-success">Edit Post</a>
+                <div class="card bg-dark" style="width: 17rem;">
+                    <img src="{{post.image.url}}" class="card-img-top" alt="{{post.title}}">
+                    <div class="card-body">
+                        <h5 class="card-title" style=" margin-bottom: 20px;">{{post.title}}</h5>
+                    <div>
+                        <small>Author: {{post.author}}</small>
                 </div>
-              </div>
+                <br>
+                <small>Tags: </small>
+                {% for tag in post.tags.all %}
+                    <span class="tag" style="background-color: #EFE1D1; color:#331D2C; padding:5px 2px; border-radius: 5px;">{{tag}}</span>
+                {% endfor %}
+                <hr>
+                <a href="{%  url 'post' post.id %}" class="btn btn-outline-light btn-floating m-1">Read More...</a>
+                <a href="{% url 'editUrl' post.id %}" class="btn btn-outline-light btn-floating m-1">Edit Post</a>
+                </div>
+            </div>
             {% endfor %}
         </div>
-    </div>
+    
+</div>
 
-{% endblock content %}
+{% endblock %}
