--- a/libreria/templates/registration/profile.html
+++ b/libreria/templates/registration/profile.html
@@ -20,9 +20,9 @@
             <li class="list-group-item">{{user.last_name}}</li>
           </ul>
           <br/>
-          <a href="{% url 'editProfile' %}" class="card-link"><button type="submit" class="button-confirm btn btn-success"> Edit Profile →</button></a>
-          <a href="{% url 'changePassword' %}" class="card-link"><button type="submit" class="button-confirm btn btn-danger"> Change Password →</button></a>
-          <a href="{% url 'changeAvatar' %}" class="card-link"><button type="submit" class="button-confirm btn btn-warning"> Change Avatar →</button></a>
+          <a href="{% url 'editProfile' %}" class="card-link"><button type="submit" class="button-confirm btn btn-outline-light btn-floating m-1">Edit Profile →</button></a>
+          <a href="{% url 'changePassword' %}" class="card-link"><button type="submit" class="button-confirm btn btn-outline-light btn-floating m-1">Edit Password →</button></a>
+          <a href="{% url 'changeAvatar' %}" class="card-link"><button type="submit" class="button-confirm btn btn-outline-light btn-floating m-1">Edit Avatar →</button></a>
         
         </div>
     </div>
