--- a/libreria/templates/courses/form.html
+++ b/libreria/templates/courses/form.html
@@ -27,6 +27,6 @@
   
     {% endfor %}
   
-    <input name="" id="" class="btn btn-primary" type="submit" value="Send edited information"></input>
-    <a name="" id="" class="btn btn-warning" href="{% url 'courses'%}" role="button">Cancel Edit</a>
+    <input name="" id="" class="btn btn-outline-light btn-floating m-1" type="submit" value="Send edited information"></input>
+    <a name="" id="" class="btn btn-outline-light btn-floating m-1" href="{% url 'courses'%}" role="button">Cancel Edit</a>
   </form>
