--- a/libreria/templates/registration/login.html
+++ b/libreria/templates/registration/login.html
@@ -8,11 +8,11 @@
     <br/>
     <form class="form" action="" method="post">
         {% csrf_token %}
-        <div class="card mx-auto bg-dark  shadow-sm p-3 mb-5 bg-body-tertiary rounded" style="width: 30rem;">
+        <div class="card mx-auto p-3 mb-5 bg-body-tertiary rounded" style="width: 30rem; background-color: #3F2E3E; color: #EFE1D1;">
           <div class="card-body">
             <h3 class="card-title text-center ">Login Form</h3>
             {{ form | crispy }}
-            <button type="submit" class="button-confirm">Login →</button>
+            <button class="btn btn-outline-light btn-floating m-1" type="submit" class="button-confirm">Login →</button>
           
             <p>Not a member? <a href="{% url 'register'%}" class="card-link">Register</a></p>
           </div>
