agregando el link del video al readme 7/15/2023

--- a/libreria/templates/us.html
+++ b/libreria/templates/us.html
@@ -30,7 +30,18 @@
                             <p class="card-text">I am Colombian, and I live in the city of Bogota, I am a systems engineer graduated in 2020, with experience in networking, databases and customer service.</p>
                             <p class="card-text">Since 2022, I have worked to become a web developer, I have taken several courses in Development, with Core languages, such as HTML, CSS and Java Script, additionally on my own, I am currently studying the React library. Now it was the turn of Python with Django, it has been a great experience to develop these skills.</p>
                             {% comment %} redes sociales {% endcomment %}
-                            <a class="btn btn-primary" href="#!">Read more →</a>
+                            <section class="mb-4 text-center">
+
+          <!-- Twitter -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/selodigodenuevo"  target="_blank" role="button" ><img src="{% static 'images/twitter.png' %}" alt="Icono de GitHub" width="20"></a>
+  
+          <!-- Linkedin -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/miller-systemsengineer/" target="_blank" role="button" ><img src="{% static 'images/linkedin.png' %}" alt="Icono de GitHub" width="20"></a>
+  
+          <!-- Github -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/millertsu1" target="_blank" role="button"><img src="{% static 'images/github.png' %}" alt="Icono de GitHub" width="20" >
+          </a>
+        </section>
                         </div>
                     </div>
                     <!-- Nested row for non-featured blog posts-->
